# projet-dodo

./: .gitignore  README.md  config.py  data.db  main.py  pyproject.toml
db/: models.py  queries.py  seed.py
static/: styles.css
templates/: index.html
